@@ -50,6 +50,11 @@ LX_SOURCES = \
 	$(DRIVER_SRC_DIR)/LX/LXN.cpp \
 	$(DRIVER_SRC_DIR)/LX/Register.cpp
 
+LX_EOS_SOURCES = \
+	$(DRIVER_SRC_DIR)/LX_EOS/LXEosDevice.cpp \
+	$(DRIVER_SRC_DIR)/LX_EOS/LXEosRegister.cpp \
+	$(DRIVER_SRC_DIR)/LX_EOS/LXEosParser.cpp \
+	
 FLARM_SOURCES = \
 	$(DRIVER_SRC_DIR)/FLARM/Device.cpp \
 	$(DRIVER_SRC_DIR)/FLARM/Register.cpp \
@@ -95,6 +100,7 @@ DRIVER_SOURCES = \
 	$(CAI302_SOURCES) \
 	$(IMI_SOURCES) \
 	$(LX_SOURCES) \
+	$(LX_EOS_SOURCES) \
 	$(FLARM_SOURCES) \
 	$(FLYTEC_SOURCES) \
 	$(VEGA_SOURCES) \
