@@ -19,6 +19,7 @@
 #include "Device/Driver/Volkslogger.hpp"
 #include "Device/Driver/EWMicroRecorder.hpp"
 #include "Device/Driver/LX.hpp"
+#include "Device/Driver/LX_Eos.hpp"
 #include "Device/Driver/IMI.hpp"
 #include "Device/Driver/Zander.hpp"
 #include "Device/Driver/FlymasterF1.hpp"
@@ -61,6 +62,7 @@ static const struct DeviceRegister *const driver_list[] = {
   &volkslogger_driver,
   &ew_microrecorder_driver,
   &lx_driver,
+  &lx_eos_driver,
   &zander_driver,
   &flymaster_f1_driver,
   &xcom760_driver,
