@@ -114,7 +114,8 @@ Version 7.43-rc0 - 2024-06-02
   - fix loss of "home" waypoint designation in certain situations for a
     non-airport home waypoint
 * devices
-  - add Larus driver
+  - add Larus driver  
+  - added driver for LX Navigation Eos57 variometer
 * windows
  - black text color in airspace list like all other systems
 * Kobo
